feat: build JavaFX-based code execution engine with compiler, executor, and interactive terminal